fix: link userId to right memory chunk